src/components/styles/App.css
::-webkit-scrollbar {
   width: 3px !important;
   height: 3px !important;
}

* {
  box-sizing: border-box;
}

body {
  margin: 0 auto;
}

.app-container {
  height: 100vh;
  width: 100vw;
  color: white;
  overflow: auto;
}


.flex-container {
  height: 100vh;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
}

.box h1 {
  font-size: 48px;
}
.box {
  width: 350px;
  text-align: center;
}

.departments {
  margin-bottom: 15px;
  text-indent: 7px;
}

.language-selector-top {
  position: absolute;
  top: 2px;
  right: 1px;
}

.language-selector-bottom {
  position: absolute;
  bottom: 2px;
  right: 1px;
}

.country {
  cursor: pointer;
}

.error-box {
  margin-top: 20px;
}

.toggleForm {
  margin-bottom: 15px !important;
  margin-top: 20px;
}

/* Student Dashboard */

@media only screen and (max-width: 768px) {
  .main-box {
    width: 90vw !important;
    height: 100vh !important;
  }

  .dashboard-flex-box {
    height: 110vh !important;
  }

  #company-choices {
    flex-direction: column !important;
    width: 90% !important;
  }

  ul, ol {
    width: 80vw !important;
    height: 250vh !important;
  }

  @media only screen and (max-height: 414px) {
    .app-container {
      height: 180vh !important;
    }
  }

}

.dashboard-container {
  height: 100vh;
  width: 100vw;
}

.navbar {
  background-color: none !important;
  background: none !important;
  border-radius: 0 !important;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
}

.dashboard-flex-box {
  height: 88vh;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
}

.main-box {
  height: 80vh;
  width: 85vw;
  background-color: whitesmoke;
  border-radius: 5px;
  padding: 25px;
  color: #424242;
  text-align: center;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  display: flex;
  flex-direction: column;
  align-items: center;
}

#company-choices {
  margin-top: 15px;
  display: flex;
  justify-content: space-around;
  width: 80%;

}

#options, #choices {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-width: 40vw;
}


#company-choices ul {
  list-style-type: none;
}

#company-choices ol {
  list-style-position: inside;
  border-radius: 5px;
  min-height: 50px;
}

#company-choices ul, ol {
  width: 32vw;
  padding: 3px;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: center;
  overflow-x: auto;
  overflow-y: hidden;
}

#company-choices  li {
  margin: 6px;
  background-color: whitesmoke;
  padding: 3px 10px 3px 10px;
  cursor: grab;
  border: 1px #a8a8a8 solid;
  border-radius: 5px;
  width: 130px;
}

/* Admin Dashboard */

.table-container {
  padding: 3px;
  height: 58vh;
  width: 74vw;
  overflow-y: auto;
}

.actions-bar {
  margin-bottom: 10px;
}

.deleteButton {
  cursor: pointer;
  transition: all 0.3s;
  color: grey;
}


.deleteButton:hover {
  transform: scale(1.2);
  color: #994343;
}

.upload-input {
  margin-top: 25px;
  margin-bottom: 25px;
  width: 100px;
}

.modal-actions {
  display: flex;
  justify-content: flex-end;
}

/* admin settings */

.options-container {
  margin-top: 20px;
}
.options-box {
  width: 300px;
  display: flex;
  justify-content: space-between;
}

/* sorter  */

.sorter-container {
  width: 95%;
  height: 80%;
  display: flex;
}

.sorter-box {
  width: 50%;
  display: flex;
  flex-direction: column;
}

.sorter-display {
  height: 100%;
  width: 99%;
  border: 1px solid #c2c4c4;
  border-radius: 5px;
  overflow: auto;
  text-align: left;
}

.console-round {
  font-weight: bold;
  font-size: 20px;
  list-style-type: none;
  margin-left: -20px;
  margin-bottom: 5px;
  margin-top: 5px;
}
.console-header {
  font-weight: bold;
  list-style-type: none;
  margin-left: -17px;
  margin-bottom: 2px;
  margin-top: 2px;
}

.console-message {

}

.console-warning {
  color: red;
}

.console-success {
  color: green;
}

#output {
  padding: 10px;
}

